# Jenkins_Dashboard

./: .env.example  .gitignore  CONFIGURATION.md  README.md  docker-compose.yml  main.py  pyproject.toml
db/: README.md
db/init/: 01_init.sql
src/: config.py  data_manager.py  jenkins_api.py  postgres_manager.py  ui.py
