[project]
name = "devops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "psycopg2-binary>=2.9.9",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
